# rusty-db

./: .gitattributes  .gitignore  ADVANCED_SQL_FEATURES.md  AGENT10_FINAL_REPORT.md  AGENT11_ADDITIONAL_FILES_REPORT.md  AGENT11_DEPLOYMENT_SUMMARY.md  AGENT2_IMPLEMENTATION_SUMMARY.txt  AGENT9_INDEX_SIMD_OPTIMIZATIONS_REPORT.md  AGENT_2_SUMMARY.md  AGENT_6_SUMMARY.md  AGENT_9_QUICK_REFERENCE_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_PLAN.md  BUFFER_MODULE_SUMMARY.md  BUFFER_POOL_FEATURES.md  BUFFER_POOL_IMPLEMENTATION.md  BUFFER_POOL_IMPROVEMENTS_SUMMARY.md  BUILD_FIXER_RESULTS.md  BUILD_FIX_COMPLETE.md  BUILD_FIX_SUMMARY.md  BUILD_OPTIMIZATION_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CLAUDE.md  CLUSTER_NETWORK.md  COMPILATION_FIXES.md  COMPLETE_FEATURE_GUIDE.md  CONCURRENCY_OPTIMIZATIONS_SUMMARY.md  Cargo.toml  DEPLOYMENT_QUICK_START.md  DOCUMENTATION_COORDINATION_REPORT_AGENT11.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_STORE_OVERVIEW.md  DOCUMENT_STORE_TEST_REPORT.md  ENTERPRISE_AGENT_5_SUMMARY.md  ENTERPRISE_DEPLOYMENT_COORDINATION_REPORT.md  ENTERPRISE_DOCS_AGENT10_SUMMARY.md  ENTERPRISE_FEATURES.md  EXECUTION_PARSER_FIXES.md  (+99 more)
.cargo/: config.toml
.claude/: settings.local.json
.scratchpad/: AGENT10_MISC.md  AGENT1_METRICS_SERDE_FIX_2025_12_11.md  AGENT1_STORAGE_BUFFER.md  AGENT1_STORAGE_REPORT.md  AGENT2_TRANSACTION_EXECUTION.md  AGENT2_TRANSACTION_REPORT.md  AGENT3_FINAL_REPORT.md  AGENT3_SECURITY.md  AGENT3_SECURITY_REPORT.md  AGENT4_INDEX_SIMD.md  AGENT4_QUERY_REPORT.md  AGENT5_CLUSTERING_RAC.md  AGENT5_FINAL_IMPLEMENTATION_REPORT.md  AGENT5_INDEX_MEMORY_REPORT.md  AGENT5_ROUTE_REGISTRATION.md  AGENT5_SUMMARY.md  AGENT6_ANALYTICS_ML.md  AGENT6_NETWORK_POOL_REPORT.md  AGENT7_BACKUP_MONITORING.md  AGENT7_REPLICATION_CLUSTER_REPORT.md  AGENT7_SUMMARY.md  AGENT8_COMPLETION_REPORT.md  AGENT8_MONITORING_ADMIN_REPORT.md  AGENT8_NETWORK_API.md  AGENT9_GRAPH_SPATIAL.md  AGENT9_ML_ANALYTICS_REPORT.md  AGENT_03_ENTERPRISE_INTEGRATION_COMPLETE.md  AGENT_07_GRAPHQL_SUBSCRIPTIONS_COMPLETE.md  AGENT_10_PERFORMANCE_REPORT.md  AGENT_11_FINAL_STATUS.md  AGENT_11_INTEGRATION_SUMMARY.md  AGENT_12_SCRATCHPAD_ANALYSIS_REPORT.md  AGENT_12_V06_SCRATCHPAD_ANALYSIS.md  AGENT_1_REPORT.md  AGENT_3_COMPLETION_REPORT.md  AGENT_ASSIGNMENTS.md  AGENT_COORDINATION_2025_12_10.md  AGENT_STATUS.md  AGENT_STATUS_BOARD.md  ANALYSIS_COORDINATION.md  (+136 more)
benches/: buffer_pool_bench.rs  index_operations_bench.rs  index_simd_optimizations.rs  network_io_bench.rs  query_execution_bench.rs  transaction_bench.rs
builds/: BUILD_INFO.md
conf/: rustydb.toml
diagrams/: 00_master_architecture_flow.md  01_core_foundation_flow.md  02_storage_layer_flow.md  03_transaction_memory_flow.md  04_query_processing_flow.md  05_index_simd_flow.md  06_network_api_flow.md  07_security_enterprise_flow.md  08_specialized_engines_flow.md  10_implementation_summary.md  CROSS_MODULE_ANALYSIS.md  DATA_FLOW_DETAILED.md  DUPLICATE_CODE_PATTERNS.md  EA1_ANALYSIS_COMPLETE.md  EA1_CORE_FOUNDATION.md  EA1_FIXES_APPLIED.md  EA1_MASTER_FINDINGS_UPDATE.md  EA1_SECURITY_STORAGE_FLOW.md  EA2_FINAL_REPORT.txt  EA2_FIXES_APPLIED.md  EA2_SECURITY_TRANSACTION_FLOW.md  EA2_STORAGE_BUFFER.md  EA2_SUMMARY.md  EA3_FIXES_APPLIED.md  EA3_SECURITY_QUERY_FLOW.md  EA3_TRANSACTION.md  EA4_FIXES_APPLIED.md  EA4_QUERY_PROCESSING.md  EA4_SECURITY_INDEX_SIMD_FLOW.md  EA5_FIXES_APPLIED.md  EA5_INDEX_CONCURRENCY.md  EA5_SECURITY_NETWORK_API_FLOW.md  EA6_FIXES_APPLIED.md  EA6_NETWORKING_API.md  EA6_SECURITY_CORE_FLOW.md  EA6_SECURITY_FINDINGS_SUMMARY.md  EA7_FINAL_REPORT.md  EA7_FIXES_APPLIED.md  EA7_MASTER_FINDINGS_UPDATE.md  EA7_SECURITY.md  (+15 more)
docs/: AGENT9_DDL_RESULT_FIX_REPORT.md  AGENT_7_REPLICATION_RAC_OPTIMIZATIONS.md  ALGORITHM_OPTIMIZATIONS.md  API_COVERAGE_REPORT.md  API_REFERENCE.md  API_UPDATES.md  ARCHITECTURE.md  COMPLIANCE_MATRIX.md  CONNECTION_POOL.md  CONNECTION_POOL_API.md  CONNECTION_POOL_OPTIMIZATIONS.md  DEAD_CODE_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCUMENT_STORE_DETAILED_TESTS.md  ENTERPRISE_API_COVERAGE_REPORT.md  FLASHBACK_TEST_REPORT.md  FRONTEND_GUIDE.md  GRAPHQL_DDL_RESULT_USAGE.md  GRAPHQL_TESTING_INDEX.md  INCIDENT_RESPONSE.md  INDEX_MODULE_COMPREHENSIVE_TEST_REPORT.md  INDEX_QUICK_REFERENCE.md  INDEX_TEST_REPORT.md  MEMORY_TEST_QUICK_REFERENCE.md  MULTITENANT_TEST_INDEX.md  NETWORKING_MODULE_ANALYSIS.md  NETWORKING_TEST_DELIVERABLES.md  NETWORKING_TEST_REPORT.md  NODEJS_ADAPTER_PR48_UPDATE.md  NODEJS_ADAPTER_RELEASE_NOTES.md  OPERATIONS_GUIDE.md  OPERATIONS_TEST_REPORT.md  ORCHESTRATION_TEST_CATALOG.md  ORCHESTRATION_TEST_SUMMARY.md  PARSER_TEST_QUICK_REFERENCE.md  PARSER_TEST_RESULTS.md  PERFORMANCE_MODULE_TEST_REPORT.md  PERFORMANCE_TEST_SUMMARY.md  PROCEDURES_EXECUTIVE_SUMMARY.md  (+25 more)
examples/: buffer_pool_demo.rs  buffer_usage.rs  cluster_network_demo.rs  connection_pool_demo.rs  p2p_communication_demo.rs  websocket_client.py  websocket_client.rs
frontend/: .env.example  .env.production  .gitignore  Dockerfile  QUERY_EDITOR_README.md  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
include/: rustydb.h
nodejs-adapter/: .eslintrc.cjs  README-GRAPHQL.md  README-V0.6.md  README.md  package-lock.json  package.json  tsconfig.json
releases/: rusty-db-cli  rusty-db-server
scripts/: NETWORKING_CURL_TEST_SUITE.sh  add_enterprise_routes.sh  add_routes.py  add_ws_routes.py  comprehensive_shard_partition_tests.sh  execution_tests.sh  graphql_curl_commands.sh  index_test_suite.sh  test_resource_manager.sh  test_sharding_partitioning.sh  transaction_tests.sh
src/: cli.rs  common.rs  compat.rs  error.rs  lib.rs  main.rs  metadata.rs
test_data/: websocket_test_messages.json
test_results/: STORAGE_TEST_REPORT.md  comprehensive_shard_test_results.json  docstore_test_output.txt  io_test_results.md  network_test_report.md  optimizer_test_report.md  shard_test_results.txt  storage_test_results_v2.txt  test_SHARD-002.txt  test_SHARD-003.txt  test_SHARD-005.txt  test_SHARD-006.txt  test_SHARD-009.txt  (+48 more)
(+1463 files in other folders)
