[package]
name = "rusty-db"
version = "0.1.0"
edition = "2021"
authors = ["RustyDB Contributors"]
description = "Enterprise-grade Rust-based database management system"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.42"
bincode = "1.3"
bytes = "1.5"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
rand = "0.8"
crc32fast = "1.3"
chrono = "0.4"
# Security and cryptography dependencies
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
rmp-serde = "1.1"
bson = "2.7"
futures = "0.3"
num_cpus = "1.16"
crossbeam = "0.8"
once_cell = "1.19"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "rusty-db-server"
path = "src/main.rs"

[[bin]]
name = "rusty-db-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
simd = []
iocp = []
