[package]
name = "rusty-db"
version = "0.1.0"
edition = "2021"
authors = ["RustyDB Contributors"]
description = "Enterprise-grade Rust-based database management system"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.42"
bincode = "1.3"
bytes = "1.5"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
regex = "1.10"
rand = "0.8"
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
# Security and cryptography dependencies
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rsa = "0.9"
async-trait = "0.1"
rmp-serde = "1.1"
bson = "2.7"
futures = "0.3"
num_cpus = "1.16"
num-traits = "0.2"
crossbeam = "0.8"
once_cell = "1.19"
libc = "0.2"
rayon = "1.8"
# Web framework and API dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
hyper = "1.0"
http = "1.0"
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
tokio-tungstenite = "0.21"
async-stream = "0.3"
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"
fastrand = "2.0"
unicode-normalization = "0.1"
lazy_static = "1.4"
stats = "0.0.1"
result = "1.0.0"
size = "0.5.0"
state = "0.6.0"
context = "3.0.0"
source = "0.2.1"
logs = "0.7.1"
key = "1.2.6"
tokio-test = "0.4.4"
check = "1.0.0"
handlers = "0.10.0"
generic-array = "1.3.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "rusty-db-server"
path = "src/main.rs"

[[bin]]
name = "rusty-db-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
simd = []
iocp = []
stats = []
