[package]
authors = ["RustyDB Contributors"]
description = "Enterprise-grade Rust-based database management system"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rusty-db"
version = "0.3.1"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.3"
log = "0.4"
parking_lot = "0.12"
rand = "0.9.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.60.0"
thiserror = "2.0.17"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Security and cryptography dependencies
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22.1"
bson = "3.1.0"
chacha20poly1305 = "0.10"
crossbeam = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hkdf = "0.12"
hmac = "0.12"
libc = "0.2"
num-traits = "0.2"
num_cpus = "1.16"
once_cell = "1.19"
rayon = "1.8"
rmp-serde = "1.1"
rsa = { version = "0.9", features = ["sha2"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
sha2 = "0.10"
uuid = { version = "1.6", features = ["serde", "v4"] }
# Web framework and API dependencies
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "ws"] }
check = "1.0.0"
context = "3.0.0"
# counts = "1.0.6"  # Commented out: missing a lib target
fastrand = "2.0"
flate2 = "1.1.5"
futures-util = "0.3"
generic-array = "1.3.5"
handlers = "0.10.0"
hex = "0.4"
http = "1.0"
hyper = "1.0"
key = "1.2.6"
lazy_static = "1.4"
logs = "0.7.1"
now = "0.1.3"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
result = "1.0.0"
rustls-pki-types = "1.13.1"
sha1 = "0.10.6"
size = "0.5.0"
socket2 = { version = "0.6.1", features = ["all"] }
source = "0.2.1"
state = "0.6.0"
stats = "0.0.1"
sys-info = "0.9.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-test = "0.4.4"
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.8", features = ["cors", "limit", "timeout", "trace"] }
unicode-normalization = "0.1"
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
x509-parser = { version = "0.18.0", features = ["verify"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.8"

[[bin]]
name = "rusty-db-server"
path = "src/main.rs"

[[bin]]
name = "rusty-db-cli"
path = "src/cli.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3

[features]
default = []
iocp = []
simd = []
stats = []
